<resources>
    <string name="app_name">KroPlayer</string>
    <string name="kroplayer">KroPlayer</string>
    <!--    主页面三个bottomNavigation Icon对应名称-->
    <string name="text_mainvideo">主页</string>
    <string name="text_videolist">文件</string>
    <string name="text_setting">设置</string>

    <string name="text_mainvideo_videodurationtips">视频时长:</string>
    <string name="text_mainvideo_videoname">电影名称</string>
    <string name="text_mainvideo_trafficsize">0.00kb</string>
    <string name="text_mainvide_videodate">2020.01.01</string>
    <string name="text_mainvideo_videoduration">1:56:30</string>
    <!--    播放速度-->
    <string name="text_play_speed_one">0.5x</string>
    <string name="text_play_speed_two">0.75x</string>
    <string name="text_play_speed_three">1.0x</string>
    <string name="text_play_speed_four">1.25x</string>
    <string name="text_play_speed_five">1.5x</string>
    <string name="text_play_speed_six">1.75x</string>
    <string name="text_play_speed_seven">2.0x</string>
    <!--    共享元素->跳转共享同名称-->
    <string name="text_transition_share_image">share_image</string>
    <!--    屏幕切换比例-->
    <string name="text_screen_scale_16_9">16:9</string>
    <string name="text_screen_scale_4_3">4:3</string>
    <string name="text_screen_scale_full">全屏</string>
    <string name="text_screen_scale_match_full">拉伸全屏</string>
    <string name="text_screen_scale_default">默认比例</string>
    <!--    删除文件dialog-->
    <string name="text_dialog_delete_video_message">你确定要删除此文件吗 |^?^|</string>
    <string name="text_sure">确定</string>
    <string name="text_cancle">取消</string>
    <string name="text_file_delete_successful">该文件删除成功|^!^|</string>
    <string name="text_file_delete_faile">该文件删除失败|^!^|</string>
    <!--    toolbar menu-->
    <string name="text_search">search</string>
    <string name="text_select">select</string>
    <string name="text_click_once_close">再按一次退出KroPlayer(^_^)</string>
    <string name="text_delete_unrecoverable">删除后不可恢复，是否删除该条目？</string>
    <string name="text_delete_unrecoverable_pice">删除后不可恢复，是否删除这</string>
    <string name="text_delete_item">个条目？</string>
    <string name="text_selected_item">\"已选择: \"</string>
</resources>
