<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_continar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_continar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/img_item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:visibility="visible"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_video_thum"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_videoplaceholder_noload"
            android:transitionName="@string/text_transition_share_image"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/tv_videoname"
            card_view:layout_constraintStart_toEndOf="@id/img_item_checkbox"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_videoname"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/text_mainvideo_videoname"
            android:textSize="14sp"
            card_view:layout_constraintLeft_toRightOf="@id/iv_video_thum"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_videosize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_mainvideo_trafficsize"
            android:textSize="10sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toRightOf="@id/iv_video_thum"
            card_view:layout_constraintTop_toBottomOf="@id/tv_videoname"
            card_view:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vi_verticalline"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorGary"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toRightOf="@id/tv_videosize"
            card_view:layout_constraintTop_toBottomOf="@id/tv_videoname"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_videodate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_mainvide_videodate"
            android:textSize="10sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toRightOf="@id/vi_verticalline"
            card_view:layout_constraintTop_toBottomOf="@id/tv_videoname"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_durationtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_mainvideo_videodurationtips"
            android:textSize="10sp"
            card_view:layout_constraintLeft_toRightOf="@id/iv_video_thum"
            card_view:layout_constraintTop_toBottomOf="@id/tv_videosize" />

        <TextView
            android:id="@+id/tv_videoduration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_mainvideo_videoduration"
            android:textSize="10sp"
            card_view:layout_constraintLeft_toRightOf="@id/tv_durationtitle"
            card_view:layout_constraintTop_toBottomOf="@id/tv_videodate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>